# struudel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  compose-dev.yaml  compose.yaml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build-image.yml
alembic/: env.py
alembic/versions/: 20260417_1200_initial_schema.py
css/: input.css
docs/: ARCHITECTURE.md
src/struudel/: app.py  auth.py  cli.py  config.py  csrf.py  database.py  extensions.py  mail.py  request_hooks.py  template_filters.py  template_globals.py  timezones.py  version.py
src/struudel/blueprints/: __init__.py
src/struudel/blueprints/admin/: __init__.py  forms.py  routes.py
src/struudel/blueprints/auth/: __init__.py  routes.py
src/struudel/blueprints/dashboard/: __init__.py  routes.py
src/struudel/blueprints/health/: __init__.py  routes.py
src/struudel/blueprints/polls/: __init__.py  forms.py  routes.py
src/struudel/models/: __init__.py  associations.py  base.py  group.py  poll.py  poll_option.py  poll_response.py  user.py
src/struudel/services/: group.py  notifications.py  poll.py  scim.py  user.py
src/struudel/tasks/: __init__.py
src/struudel/templates/: _components.html  _flashes.html  _flashes_oob.html  _pager.html  base.html
tests/: conftest.py
tests/integration/: test_admin_group_service.py  test_admin_poll_service.py  test_admin_routes.py  test_admin_user_service.py  test_poll_service.py  test_routes_polls.py  test_security_headers.py
tests/unit/: test_forms.py  test_timezones.py
(+63 files in other folders)
