[project]
name = "struudel"
dynamic = ["version"]
description = "Self-hosted Doodle-style polling and scheduling tool"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13",
    "authlib>=1.3",
    "flask>=3.0",
    "flask-session>=0.8",
    "flask-wtf>=1.2",
    "gunicorn>=23.0",
    "huey>=2.5",
    "psycopg[binary]>=3.1",
    "pillow>=11.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "requests>=2.32",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/struudel"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty",
]
test = [
    "pytest>=8",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning:authlib.*",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
